# wajig

./: .hgignore  MANIFEST.in  Makefile  Makefile.in  NEWS  README  README.md  README.rst  TODO  TUTORIAL  bash-completer-harness  bash-completer-harness.sh  bash-completion  bash_completion.py  configure.in  gjig.1  gjig.sh  gjig.sh.in  setup.py  test.py  wajig.1  wajig.completion  wajig.sh  wajig.sh.in
.github/workflows/: makefile.yml
debian/: changelog  control  copyright  dirs  files  rules  semantic.cache  wajig.bash-completion  wajig.docs  wajig.postinst.debhelper  wajig.prerm.debhelper  wajig.substvars
docs/: README.md
help/: COMMANDS  TUTORIAL  addcdrom  addrepo  auto-alts  auto-clean  auto-download  autoalts  autoclean  autodownload  available  bug  build  build-depend  builddep  cdromadd  changelog  clean  contents  dailyupgrade  dependents  describe  describe-new  detail  detail-new  dist-upgrade  docs  download  download-file  editsources  extract  fileinstall  find-file  find-pkg  fix-configure  fix-install  fix-missing  force  help  hold  (+84 more)
snap/: snapcraft.yaml
src/: Makefile.in  __init__.py  argcomplete.py  bash_completion.py  changes.py  commands.py  const.py  const.py.in  constants.py  debfile-deps.py  debfile.py  documentation.py  gjig.glade  gjig.py  glutil.py  perform.py  shell.py  util.py  wajig.py
support/: clean.mk  latex.mk  pandoc.mk
wajig/: __init__.py  commands.py  constants.py  debfile-deps.py  debfile.py  perform.py  shell.py  util.py
wajig/bash_completion.d/: wajig.bash
