dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/wajig.py)

PACKAGE=wajig
VERSION=2.0.50

AC_PATH_PROG(PYTHON, python)

AC_SUBST(PYTHON)
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_OUTPUT(Makefile src/Makefile	src/const.py wajig.sh gjig.sh)
